--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ flutter:
   # the material Icons class.
   uses-material-design: true
 
+  assets:
+    - assets/images/example.jpg
+    - assets/images/example_poster.jpg
+
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
