--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   carousel_slider: ^5.0.0
+  provider: ^6.1.2
+  flutter_card_swiper: ^7.0.2
+  palette_generator: ^0.3.3+4
+  fluttertoast: ^8.2.8
 
 dev_dependencies:
   flutter_test:
@@ -48,7 +52,6 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-  fluttertoast: ^8.2.1
 
   google_nav_bar: ^5.0.6
 
