--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,11 +53,11 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^3.0.0
 
-
   google_nav_bar: ^5.0.6
 
-
   image_picker: ^0.8.5
+
+  url_launcher: ^6.1.8
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
