--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,12 +41,16 @@ dependencies:
   palette_generator: ^0.3.3+4
   fluttertoast: ^8.2.8
   flip_card: ^0.7.0
+  firebase_core: ^3.4.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   integration_test:
       sdk: flutter
+  firebase_core: ^3.4.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.4.0
 
 
   # The "flutter_lints" package below contains a set of recommended lints to
