--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dev_dependencies:
   firebase_core: ^3.4.0
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.4.0
+  google_sign_in: ^6.2.1
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
