--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   fluttertoast: ^8.2.8
   flip_card: ^0.7.0
   firebase_core: ^3.4.0
+  mockito: ^5.0.17
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +53,7 @@ dev_dependencies:
   firebase_auth: ^5.1.0
   cloud_firestore: ^5.4.0
   google_sign_in: ^6.2.1
+
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
