--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,7 +54,6 @@ dev_dependencies:
   cloud_firestore: ^5.4.0
   google_sign_in: ^6.2.1
 
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
@@ -67,6 +66,8 @@ dev_dependencies:
   image_picker: ^0.8.5
 
   url_launcher: ^6.1.8
+
+  intl: ^0.18.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
