--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flip_card: ^0.7.0
   firebase_core: ^3.4.0
   mockito: ^5.0.17
+  fake_cloud_firestore: ^3.1.0
 
 dev_dependencies:
   flutter_test:
